Added header section with styles

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Fitness Web</title>
 </head>
 <body>
-    <h1>Fitness</h1>
+    <header class="header">
+        <nav class="nav container">
+            <div class="brand">
+                <h1>Fitness</h1>
+            </div>
+            <ul class="menu">
+                <li><a href="" class="home">Home</a></li>
+                <li><a href="">Service</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+        </nav>
+        <div class="banner container">
+            <div class="banner-content">
+                <h1>Get body in <br><span>shape</span> & stay healthy</h1>
+                <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <button class="primary">Join Club Now!</button>
+                <button class="secondary">Download App</button>
+            </div>
+            <div class="banner-image">
+                <div class="workout">
+                    <h3>500+</h3>
+                    <p>Free Workout Videos</p>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
