--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/290838e588.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
     <title>Fitness Web</title>
 </head>
@@ -19,6 +20,7 @@
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
             </ul>
+            <i class="fa-solid fa-bars"></i>
         </nav>
         <div class="banner container">
             <div class="banner-content">
@@ -28,9 +30,17 @@
                 <button class="secondary">Download App</button>
             </div>
             <div class="banner-image">
-                <div class="workout">
-                    <h3>500+</h3>
-                    <p>Free Workout Videos</p>
+                <img src="./images/banner-image.png" alt="">
+                <div class="workout-cart">
+                    <h1>500+</h1>
+                    <p>Free Workout videos</p>
+                </div>
+                <div class="video-cart">
+                    <div class="circle"><i class="fa-solid fa-play"></i></div>
+                    <div class="tutorial">
+                        <h3>350+</h3>
+                        <p>Video Tutorials</p>
+                    </div>
                 </div>
             </div>
         </div>
