--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Fitness Web</title>
 </head>
 <body>
+    <!-- Header section start Here -->
     <header class="header">
         <nav class="nav container">
             <div class="brand">
@@ -45,5 +46,52 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <!-- habit section start here -->
+        <section class="habit-wrapper container">
+            <div class="habit-titlebar">
+                <h1>Change Your Habits</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="exercise-container">
+                <div class="row">
+                    <img src="./images/movement.png" alt="">
+                    <h6>Movement</h6>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="row">
+                    <img src="./images/time.png" alt="">
+                    <h6>Time</h6>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="row">
+                    <img src="./images/practice.png" alt="">
+                    <h6>Practice</h6>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="row">
+                    <img src="./images/weight.png" alt="">
+                    <h6>Weight Loss</h6>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+        <!-- habit section End here -->
+
+        <!-- Run section start here -->
+        <section class="run-wrapper container">
+            <div class="run-content">
+                <h1 class="title">Run an Extra <br>Mile Easily</h1>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="primary">Join Now</button>
+            </div>
+            <div class="run-image">
+                <img src="images/run.png" alt="">
+            </div>
+        </section>
+        <!-- Run section end here -->
+    </main>
+    <!-- Main section End here -->
 </body>
 </html>
