--- a/index.html
+++ b/index.html
@@ -84,13 +84,30 @@
             <div class="run-content">
                 <h1 class="title">Run an Extra <br>Mile Easily</h1>
                 <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
-                <button class="primary">Join Now</button>
+                <button class="primary btn">Join Now</button>
             </div>
             <div class="run-image">
                 <img src="images/run.png" alt="">
             </div>
         </section>
         <!-- Run section end here -->
+
+        <!-- Training section start here -->
+        <section class="training-wrapper container">
+            <div class="training-titlebar">
+                <h1 class="title">Trainings and Exercises</h1>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="training-images">
+                <div class="row1">
+                    <p class="img1">Lorem Ipsum</p>
+                    <p class="img2">Lorem Ipsum</p>
+                    <p class="img3">Lorem Ipsum</p>
+                </div>
+                <div class="row2"></div>
+            </div>
+        </section>
+        <!-- Training section End here -->
     </main>
     <!-- Main section End here -->
 </body>
