Added training section with styles and responsive

--- a/index.html
+++ b/index.html
@@ -104,7 +104,21 @@
                     <p class="img2">Lorem Ipsum</p>
                     <p class="img3">Lorem Ipsum</p>
                 </div>
-                <div class="row2"></div>
+                <div class="row2">
+                    <div class="img-para img-para1">
+                        <img src="./images/exercise4.png" alt="">
+                        <p>Lorem Ipsum</p>
+                    </div>
+                    <div class="img-para img-para2">
+                        <img src="./images/exercise5.jpg" alt="">
+                        <p>Lorem Ipsum</p>
+                    </div>
+                    <div class="img-para img-para3">
+                        <img src="./images/exercise6.jpg" alt="">
+                        <p>Lorem Ipsum</p>
+                    </div>
+                </div>
+                <!-- <div class="row2"></div> -->
             </div>
         </section>
         <!-- Training section End here -->
