--- a/index.html
+++ b/index.html
@@ -124,5 +124,69 @@
         <!-- Training section End here -->
     </main>
     <!-- Main section End here -->
+
+    <!-- BMI section start here -->
+    <section class="bmi-section">
+        <div class="bmi-title-wrapper">
+            <div class="bmi-title-wrap">
+                <h1 class="title">BMI Calculator</h1>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+        </div>
+        <div class="bmi-wrapper container">
+            <div class="bmi-chart ">
+                <table>
+                    <caption>BMI Calulate Chart</caption>
+                    <thead>
+                        <tr>
+                            <td>BMI</td>
+                            <td>Weight Status</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr>
+                            <td>18.5 - 24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr>
+                            <td>30.0 - and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="calculate-bmi">
+                <div class="bmi-title">
+                    <h3 class="title">Calculate Your BMI</h3>
+                    <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                </div>
+                <form >
+                    <div class="form">
+                        <input type="number" placeholder="Height">
+                        <input type="number" placeholder="Weight">
+                        <input type="number" placeholder="Age">
+                        <select>
+                            <option value="">Sex</option>
+                        </select>
+                        <select class="activity" name="" id="">
+                            <option value="Select an Activity Factor">Select an Activity Factor</option>
+                        </select>
+                    </div>
+                    <button class="primary form-btn">Calculate</button>
+                </form>
+
+            </div>
+        </div>
+    </section> 
+    <!-- BMI section end here -->
+
 </body>
 </html>
