Complete Tea section

--- a/index.html
+++ b/index.html
@@ -188,5 +188,60 @@
     </section> 
     <!-- BMI section end here -->
 
+    <!-- Team section start here -->
+    <section class="team-wrapper">
+        <div class="container">
+            <div class="team-titlebar">
+                <h1 class="title">Meet Our Team</h1>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="team-members">
+                <div>
+                    <img src="./images/team-jerorr.png" alt="">
+                    <div class="member-name">
+                        <h4>Jerome Bell</h4>
+                        <p>Trainer</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/team-came.png" alt="">
+                    <div class="member-name">
+                        <h4>Cameron Williamson</h4>
+                        <p>Trainer</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/team-darrel.png" alt="">
+                    <div class="member-name">
+                        <h4>Darrel Steward</h4>
+                        <p>Trainer</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/team-dian.png" alt="">
+                    <div class="member-name">
+                        <h4>Dianne Russell</h4>
+                        <p>Trainer</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/team-cody.png" alt="">
+                    <div class="member-name">
+                        <h4>Cody Fisher</h4>
+                        <p>Trainer</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/team-there.png" alt="">
+                    <div class="member-name">
+                        <h4>Theresa Webb</h4>
+                        <p>Trainer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Team section end here -->
+
 </body>
 </html>
