--- a/index.html
+++ b/index.html
@@ -242,6 +242,40 @@
         </div>
     </section>
     <!-- Team section end here -->
- 
+    
+    <!-- Footer section start here -->
+    <section class="footer">
+        <div class="footer-wrap container">
+            <div class="fitness-column">
+                <h1>Fitness</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            </div>
+            <div class="about-column">
+                <h3>Get started</h3>
+                <ul>
+                    <li>Service</li>
+                    <li>Contact Us</li>
+                    <li>Affiliate Program</li>
+                    <li>About Us</li>
+                </ul>
+            </div>
+            <div class="service-column">
+                <h3>Get started</h3>
+                <ul>
+                    <li>Fitness</li>
+                    <li>Platform</li>
+                    <li>Workout Libary</li>
+                    <li>App Design</li>
+                </ul>
+            </div>
+        </div>
+        <div class="reserve container">
+            <p>All right reserved &commat;Fitness 2024</p>
+        </div>
+        
+    </section>
+    <!-- Footer section end here -->
+
+
 </body>
 </html>
