Made some style changes inside the training section.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="banner-content">
                 <h1>Get body in <br><span>shape</span> & stay healthy</h1>
                 <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
-                <button class="primary">Join Club Now!</button>
+                <button class="primary">Join <span class="btn-club">Club</span> Now!</button>
                 <button class="secondary">Download App</button>
             </div>
             <div class="banner-image">
@@ -102,21 +102,19 @@
                 <div class="row1">
                     <p class="img1">Lorem Ipsum</p>
                     <p class="img2">Lorem Ipsum</p>
-                    <p class="img3">Lorem Ipsum</p>
+                    <p class="img3">Leg Press: Works the<br>quadriceps and glutes</p>
                 </div>
                 <div class="row2">
-                    <div class="img-para img-para1">
-                        <img src="./images/exercise4.png" alt="">
-                        <p>Lorem Ipsum</p>
-                    </div>
-                    <div class="img-para img-para2">
-                        <img src="./images/exercise5.jpg" alt="">
-                        <p>Lorem Ipsum</p>
-                    </div>
-                    <div class="img-para img-para3">
-                        <img src="./images/exercise6.jpg" alt="">
-                        <p>Lorem Ipsum</p>
-                    </div>
+                        <!-- <img src="./images/exercise4.png" alt=""> -->
+                        <p class="img4">Leg Press: Works the<br>quadriceps and glutes</p>
+
+                        <!-- <img src="./images/exercise5.jpg" alt=""> -->
+                        <p class="img5">Leg Press: Works the<br>quadriceps and glutes</p>
+
+
+                        <!-- <img src="./images/exercise6.jpg" alt=""> -->
+                        <p class="img6">Leg Press: Works the<br>quadriceps and glutes</p>
+
                 </div>
                 <!-- <div class="row2"></div> -->
             </div>
@@ -275,7 +273,5 @@
         
     </section>
     <!-- Footer section end here -->
-
-
 </body>
 </html>
