Added Membership Unique section with styles and respnsive

--- a/index.html
+++ b/index.html
@@ -105,18 +105,10 @@
                     <p class="img3">Leg Press: Works the<br>quadriceps and glutes</p>
                 </div>
                 <div class="row2">
-                        <!-- <img src="./images/exercise4.png" alt=""> -->
-                        <p class="img4">Leg Press: Works the<br>quadriceps and glutes</p>
-
-                        <!-- <img src="./images/exercise5.jpg" alt=""> -->
-                        <p class="img5">Leg Press: Works the<br>quadriceps and glutes</p>
-
-
-                        <!-- <img src="./images/exercise6.jpg" alt=""> -->
-                        <p class="img6">Leg Press: Works the<br>quadriceps and glutes</p>
-
+                    <p class="img4">Leg Press: Works the<br>quadriceps and glutes</p>
+                    <p class="img5">Leg Press: Works the<br>quadriceps and glutes</p>
+                    <p class="img6">Leg Press: Works the<br>quadriceps and glutes</p>
                 </div>
-                <!-- <div class="row2"></div> -->
             </div>
         </section>
         <!-- Training section End here -->
@@ -168,8 +160,8 @@
                 </div>
                 <form >
                     <div class="form">
-                        <input type="number" placeholder="Height">
-                        <input type="number" placeholder="Weight">
+                        <input type="number" placeholder="Height/cm">
+                        <input type="number" placeholder="Weight/kg">
                         <input type="number" placeholder="Age">
                         <select>
                             <option value="">Sex</option>
@@ -241,6 +233,52 @@
     </section>
     <!-- Team section end here -->
     
+    <section class="membership">
+        <h1>Select Your Membership</h1>
+        <div class="membership-wrap container">
+            
+            <div class="card">
+                <h1>ONE DAY PASS</h1>
+                <h2>$15/PER DAY</h2>
+                <p>BASIC PLAN</p>
+                <ul>
+                    <li>24 hours access</li>
+                    <li>Unlimited classses</li>
+                    <li>Flexibale classes</li>
+                    <li>BMi Tracker</li>
+                    <li>Personal trainer</li>
+                </ul>
+                <button class="card-btn">CHOOSE PACKAGE</button>
+            </div>
+            <div class="card">
+                <h1>MONTHLY PASS</h1>
+                <h2>$59/PER MONTH</h2>
+                <p>STANDARD PLAN</p>
+                <ul>
+                    <li>Locker room access</li>
+                    <li>Unlimited group classes</li>
+                    <li>Gym equipment</li>
+                    <li>1 group class/week</li>
+                    <li>Service discounts</li>
+                </ul>
+                <button class="card-btn">CHOOSE PACKAGE</button>
+            </div>
+            <div class="card">
+                <h1>YEARLY PASS</h1>
+                <h2>$99/PER MONTH</h2>
+                <p>PREMIUM PLAN</p>
+                <ul>
+                    <li>Free health assessments</li>
+                    <li>Discounted group classes</li>
+                    <li>Senior fitness classes</li>
+                    <li>Unlimited group classes</li>
+                    <li>Up to 4 family members</li>
+                </ul>
+                <button class="card-btn">CHOOSE PACKAGE</button>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer section start here -->
     <section class="footer">
         <div class="footer-wrap container">
