changed lorem text and change some styles and finished assignment two with super challenge

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="banner container">
             <div class="banner-content">
                 <h1>Get body in <br><span>shape</span> & stay healthy</h1>
-                <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <p>Fitness is a journey to discover your strongest self, both physically and mentally. It's about progress, not perfection, and finding joy in the process.</p>
                 <button class="primary">Join <span class="btn-club">Club</span> Now!</button>
                 <button class="secondary">Download App</button>
             </div>
@@ -52,28 +52,28 @@
         <section class="habit-wrapper container">
             <div class="habit-titlebar">
                 <h1>Change Your Habits</h1>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p>Small changes, big impact. Cultivate new habits for a transformed you.</p>
             </div>
             <div class="exercise-container">
                 <div class="row">
                     <img src="./images/movement.png" alt="">
                     <h6>Movement</h6>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <p>Gym movement is more than exercise; it's a lifestyle shift towards strength, endurance, and overall well-being.</p>
                 </div>
                 <div class="row">
                     <img src="./images/time.png" alt="">
                     <h6>Time</h6>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <p>Prioritize gym time, schedule it like an important meeting. Consistency is key to achieving your fitness goals.</p>
                 </div>
                 <div class="row">
                     <img src="./images/practice.png" alt="">
                     <h6>Practice</h6>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <p>Practice is the bridge between potential and mastery. Consistent effort shapes dreams into reality.</p>
                 </div>
                 <div class="row">
                     <img src="./images/weight.png" alt="">
                     <h6>Weight Loss</h6>
-                    <p>We believe fitness should be accessible to everyone</p>
+                    <p>Weight loss is a journey, not a race. Focus on sustainable habits for long-term results.</p>
                 </div>
             </div>
         </section>
@@ -83,7 +83,7 @@
         <section class="run-wrapper container">
             <div class="run-content">
                 <h1 class="title">Run an Extra <br>Mile Easily</h1>
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <p class="description">Build endurance gradually, improve your running form, and fuel your body right. An extra mile becomes a breeze with consistent effort.</p>
                 <button class="primary btn">Join Now</button>
             </div>
             <div class="run-image">
@@ -95,8 +95,8 @@
         <!-- Training section start here -->
         <section class="training-wrapper container">
             <div class="training-titlebar">
-                <h1 class="title">Trainings and Exercises</h1>
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <h1 class="title">Training and Exercises</h1>
+                <p class="description">Training builds the foundation, exercises sculpt the masterpiece. Consistency is the chisel that reveals your potential.</p>
             </div>
             <div class="training-images">
                 <div class="row1">
@@ -120,7 +120,7 @@
         <div class="bmi-title-wrapper">
             <div class="bmi-title-wrap">
                 <h1 class="title">BMI Calculator</h1>
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="description">Quick estimate of body fat based on height and weight. Remember, it's just a starting point, not a definitive health measure.</p>
             </div>
         </div>
         <div class="bmi-wrapper container">
@@ -156,7 +156,7 @@
             <div class="calculate-bmi">
                 <div class="bmi-title">
                     <h3 class="title">Calculate Your BMI</h3>
-                    <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                    <p class="description">Calculate your BMI for a clearer picture of your health journey.</p>
                 </div>
                 <form >
                     <div class="form">
@@ -183,7 +183,7 @@
         <div class="container">
             <div class="team-titlebar">
                 <h1 class="title">Meet Our Team</h1>
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="description">Discover the passionate individuals driving our mission. Meet our team of experts.</p>
             </div>
             <div class="team-members">
                 <div>
@@ -284,7 +284,7 @@
         <div class="footer-wrap container">
             <div class="fitness-column">
                 <h1>Fitness</h1>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <p>Fitness is not about reaching a perfect body, it's about embracing a healthier lifestyle. It's a journey, not a destination, so celebrate every small win along the way.</p>
             </div>
             <div class="about-column">
                 <h3>Get started</h3>
